--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
+        "@sveltejs/vite-plugin-svelte": "^2.0.4",
+        "@types/node": "^18.15.11",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "svelte": "^3.58.0",
+        "svelte-loader": "^3.1.7",
+        "tslib": "^2.5.0",
+        "typescript": "^5.0.4",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/svelte": "^1.0.2"
     }
 }
