--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "^2.0.4",
         "@types/node": "^18.15.11",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.23",
         "svelte": "^3.58.0",
         "svelte-loader": "^3.1.7",
+        "tailwindcss": "^3.3.1",
         "tslib": "^2.5.0",
         "typescript": "^5.0.4",
         "vite": "^4.0.0"
