--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Chatapp
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -12,8 +12,12 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=chatapp
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=chatapp
+DB_PASSWORD=iaminsecure
+
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_REDIRECT_URI="${APP_URL}/login/discord/callback"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
